# sw-xml-parser-rs

./: .gitignore  Cargo.toml  README.md  bun.lockb  package.json  tsconfig.json
src/: feed_builder.rs  index.ts  lib.rs
