# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "sw-xml-parser-rs"
version = "0.1.0"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.30"
feed-rs = "1.3"
mime = "0.3.17"
reqwest = "0.11.20"
serde = "1.0.188"
serde_json = "1.0.106"
once_cell = "1"
tokio = { version = "1", features = ["full"] }
url = "2.4.1"

[dependencies.neon]
version = "0.10.1"
default-features = false
features = ["channel-api", "napi-6", "promise-api"]
